# cp-linear-kit

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  main.cpp
algorithms/: bidiagonalization.h  givens.h  hessenberg.h  householder.h  qr_algorithm.h  qr_algorithm_bidiag.h  qr_decomposition.h  svd.h  wilkinson.h
matrix_utils/: cast_matrix.h  checks.h  is_matrix_type.h  join.h  split.h
src/algorithms/: bidiagonalization.h  givens.h  hessenberg.h  householder.h  qr_algorithm.h  qr_algorithm_bidiag.h  qr_decomposition.h  svd.h  wilkinson.h
src/matrix_utils/: cast_matrix.h  checks.h  is_matrix_type.h  join.h  split.h
src/types/: const_matrix_view.h  matrix.h  matrix_view.h  types_details.h
src/utils/: are_equal_floating.h  is_equal_floating.h  is_float_complex.h  sign.h
tests/: helpers.h  test_bidiag.cpp  test_hessenberg.cpp  test_matrix.cpp  test_matrix_view.cpp  test_performance_qr.cpp  test_performance_svd.cpp  test_qr_decomposition.cpp  test_spectral.cpp  test_svd.cpp
types/: const_matrix_view.h  fwd.h  matrix.h  matrix_view.h  types_details.h
types/matrix/: matrix.h
utils/: checks.h  is_equal_floating.h  is_float_complex.h  is_matrix_type.h  sign.h
